# nada

./: .env.sample  Dockerfile  README.md  container-compose.yml  pyproject.toml  requirements.txt
data/: openrouter.json  server.json
nada/: models.py  redis.py  settings.py  simple_agent.py
nada/fastapi_agent/: __init__.py  fastapi_agent.py  fastapi_app.py  fastapi_auth.py  fastapi_discovery.py
nada/fastapi_agent/agents/: __init__.py  base_agent.py  pydantic_ai.py
nada/fastapi_agent/chat_ui/: chat.js  index.html  new_style.css  script.js  styles.css
nada/fastapi_agent/chat_ui/templates/: index.html  providers.html
nada/llm/: locals.py  openrouter.py
nada/llm/common/: provider.py
nada/nada_celery/: celery.py  tasks.py
nada/tools/: planner.py  telegram.py
