[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nada"
version = "0.1.0"
description = "A distributed async agent orchestration system."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Richard Rosenberg", email = "richard-rosenberg@pollosalvaje.com"},
]
keywords = ["langchain", "orchestration", "llm", "async", "mcp", "celery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Celery",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "celery>=5.6.3",
    "gevent>=26.5.0",
    "redis>=8.0.0",
    "dogpile.cache>=1.5.0",
    #"yada @ git+ssh://git@github.com/rosey99/yada.git",
    "python-dotenv>=0.9.9",
    "pydantic-ai<=2.9.0",
    "pydantic-ai-harness>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
]

#[project.scripts]
#nada = "nada.simple_dispatch:nada"

[tool.setuptools.packages.find]
where = ["."]
include = ["nada*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
files=[]
#python_version = "3.11"
#warn_return_any = true
#warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["nada"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstractmethod", "if TYPE_CHECKING:"]
